--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,7 @@
  *= require_self
  */
 
-@import "bootstrap-sprockets";
+// External Frameworks
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
