add logo air bnb to navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <%= image_tag "logo.jpg" %>
+        <%= image_tag "logo_red_airbnb.svg" %>
       </a>
     </div>
 
@@ -54,7 +54,7 @@
           </li>
         <% end %>
         <li>
-          <%= link_to t(".top_call_to_action", default: "Rent your flat"), "#", class: "btn" %>
+          <%= link_to t(".top_call_to_action", default: "Publier une annonce"), "#", class: "btn" %>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
