add type form search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
 <body>
 
 <%= render 'shared/navbar' %>
-<%= render 'shared/_notices' %>
+<%= render 'shared/notices' %>
+<%= render 'shared/form' %>
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
