--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -3,9 +3,9 @@
     <form class="form-inline" role="form">
         <div class="form-group nested-group">
             <input type="text" id="left-input" class="form-control" placeholder="Ville">
-            <input type="date" id="middle-input" class="form-control" placeholder="Check-in">
-            <input type="date" id="middle-input" class="form-control" placeholder="Check-out">
-            <input type="number" id="right-input" class="form-control" placeholder="Voyageurs">
+            <input type="datetime" id="middle-input" class="form-control" placeholder="Check-in">
+            <input type="datetime" id="middle-input" class="form-control" placeholder="Check-out">
+            <input type="number" min="0" step="1" id="right-input" class="form-control" placeholder="Voyageurs">
             <button class="btn btn-primary" type="button">Rechercher</button>
         </div>
     </form>
