--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,24 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+        <%= f.input_field :first_name, placeholder: 'Prénom', required: true, autofocus: true, input_html: { class: 'decorative-input' } %>
+        <%= f.input_field :last_name, placeholder: 'Nom', required: true %>
+        <%= f.input_field :email, placeholder: 'Adresse e-mail', required: true%>
+        <%= f.input_field :password, placeholder: 'Mot de passe', required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
+        <%= f.input_field :password_confirmation, placeholder: 'Confirmation mot de passe', required: true %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+        <%= f.input_field :birthday_month, collection: ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"], required: true, prompt: "Mois" %>
+        <%= f.input_field :birthday_day, collection: 1..31, required: true, prompt: "Jour" %>
+        <%= f.input_field :birthday_year, collection: 1895..2015, required: true, prompt: "Année" %>
+
+
+        <%= f.button :submit, "Sign up", class: "btn btn-primary", value: "Inscription" %>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
