add banner non resizé

--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -2,9 +2,9 @@
   <div class="col-md-12 col-md-offset-3">
     <form class="form-inline" role="form">
         <div class="form-group nested-group">
-            <input type="text" class="form-control" placeholder="Ville">
-            <input placeholder="Check-in" type="text" onfocus="(this.type='date')" id="date" class="form-control">
-            <input placeholder="Check-out" type="text" onfocus="(this.type='date')" id="date" class="form-control">
+            <input type="text" class="form-control" placeholder="Destination">
+            <input placeholder="Arrivée" type="text" onfocus="(this.type='date')" id="date" class="form-control">
+            <input placeholder="Départ" type="text" onfocus="(this.type='date')" id="date" class="form-control">
             <input placeholder="Voyageurs" type="text" onfocus="(this.type='number')" id="traveller" class="form-control" min="0" step="1">
             <button class="btn btn-primary" type="button">Rechercher</button>
         </div>
