--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -47,14 +47,14 @@
           </li>
         <% else %>
           <li>
-            <%= link_to t(".sign_up", default: "Sign up"), new_user_registration_path %>
+            <%= link_to t(".sign_up", default: "Inscription"), new_user_registration_path %>
           </li>
           <li>
-            <%= link_to t(".sign_in", default: "Sign in"), new_user_session_path %>
+            <%= link_to t(".sign_in", default: "Connexion"), new_user_session_path %>
           </li>
         <% end %>
         <li>
-          <%= link_to t(".top_call_to_action", default: "Publier une annonce"), "#", class: "btn" %>
+          <%= link_to t(".top_call_to_action", default: "Publier une annonce"), "#", class: "btn btn-default btn-xs" %>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
