--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,23 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
+<div class="sign-in-box">
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
 
-        <%= f.input_field :first_name, placeholder: 'Prénom', required: true, autofocus: true, input_html: { class: 'decorative-input' } %>
-        <%= f.input_field :last_name, placeholder: 'Nom', required: true %>
-        <%= f.input_field :email, placeholder: 'Adresse e-mail', required: true%>
-        <%= f.input_field :password, placeholder: 'Mot de passe', required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
-        <%= f.input_field :password_confirmation, placeholder: 'Confirmation mot de passe', required: true %>
+        <%= f.input :first_name, placeholder: 'Prénom', required: true, autofocus: true, label: false, input_html: { class: 'decorative-input-name' } %>
+        <%= f.input :last_name, placeholder: 'Nom', required: true, label: false, input_html: { class: 'decorative-input-name' } %>
+        <%= f.input :email, placeholder: 'Adresse e-mail', required: true, label: false, input_html: { class: 'decorative-input-email' }%>
+        <%= f.input :password, placeholder: 'Mot de passe', required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable), label: false, input_html: { class: 'decorative-input-password' } %>
 
-        <%= f.input_field :birthday_month, collection: ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"], required: true, prompt: "Mois" %>
-        <%= f.input_field :birthday_day, collection: 1..31, required: true, prompt: "Jour" %>
-        <%= f.input_field :birthday_year, collection: 1895..2015, required: true, prompt: "Année" %>
+        <%= f.input :password_confirmation, placeholder: 'Confirmation mot de passe', required: true, label: false, input_html: { class: 'decorative-input-password' } %>
 
+        <div>
+          <strong>Anniversaire</strong>
+        </div>
+        <div class="form-inline">
+        <%= f.input :birthday_month, collection: ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"], required: true, prompt: "Mois", label: false, input_html: { class: 'decorative-input-date size-box-month' } %>
+        <%= f.input :birthday_day, collection: 1..31, required: true, prompt: "Jour", label: false, input_html: { class: 'decorative-input-date size-box-day' } %>
+        <%= f.input :birthday_year, collection: 1895..2015, required: true, prompt: "Année", label: false, input_html: { class: 'decorative-input-date size-box-year' } %>
+        </div>
 
-        <%= f.button :submit, "Sign up", class: "btn btn-primary", value: "Inscription" %>
+        <%= f.button :submit, "Sign up", class: "btn btn-primary btn-block", value: "Inscription" %>
       <% end %>
-
-      <%= render "devise/shared/links" %>
-    </div>
-  </div>
 </div>
