--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12 col-md-offset-3">
+  <div class="col-xs-12 col-md-12">
     <form class="form-inline" role="form">
         <div class="form-group nested-group">
             <input type="text" class="form-control" placeholder="Destination">
