--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+
+<%= form_for(@user, html: { multipart: true }) do |f| %>
+
+  <p>
+    <%= f.label :picture %>
+    <%= f.file_field :picture %>
+  </p>
+  <p><%= f.submit %></p>
+<% end %>
