--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container">
+
+<div class="col-lg-3">
+
+
+
+</div>
+
+<div class="col-lg-9">
+
+<h1>Bonjour, je m'appelle <%= @user.first_name %> !</h1>
+
+<%= link_to "Modifier le profil", edit_user_path(current_user)%> <br><br><br>
+<p><%= @user.description %></p>
+</div>
+
+</div>
+
+
