custom connexion form

--- a/app/assets/stylesheets/pages/_registrations.scss
+++ b/app/assets/stylesheets/pages/_registrations.scss
@@ -1,5 +1,4 @@
 .sign-in-box {
-
   padding: 20px;
   height: 450px;
   width: 300px;
@@ -7,6 +6,13 @@
   margin: 0 auto;
 }
 
+.sign-up-box {
+  padding: 20px;
+  height: 275px;
+  width: 215px;
+  background-color: white;
+  margin: 0 auto;
+}
 .decorative-input-name {
   background-image: url(https://a2.muscache.com/airbnb/static/signinup/text-field-icons-9c18e4e23864cb33a8f0f7c32c0b86ee.png);
   background-repeat: no-repeat;
