--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,13 +2,15 @@
 
 <div class="col-lg-3">
 
-
+<br>
+<%= image_tag @user.picture.url(:medium), class: "img-size" %>
 
 </div>
 
 <div class="col-lg-9">
 
 <h1>Bonjour, je m'appelle <%= @user.first_name %> !</h1>
+
 
 <%= link_to "Modifier le profil", edit_user_path(current_user)%> <br><br><br>
 <p><%= @user.description %></p>
