--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,13 @@
 
 <%= form_for(@user, html: { multipart: true }) do |f| %>
 
-  <p>
+  <div class="form-group">
     <%= f.label :picture %>
     <%= f.file_field :picture %>
-  </p>
+  </div>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description %>
+  </div>
   <p><%= f.submit %></p>
 <% end %>
