--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -24,3 +24,8 @@
         border-top-left-radius: 0px;
         border-bottom-left-radius: 0px;
     }
+
+    .search-size {
+        width:100%;
+        height:44px;
+    }
