--- a/app/assets/stylesheets/pages/_registrations.scss
+++ b/app/assets/stylesheets/pages/_registrations.scss
@@ -98,4 +98,15 @@
   margin-top:10px;
 }
 
+.banner-transparent {
+  opacity: 0.5;
+  margin-top:-100px;
+  background-image: url(flat_banniere.jpg);
+  width: 100%;
+  height: 650px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top:80px;
+}
+
 
