--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,10 +26,20 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <%= f.label :picture %>
+    <%= f.file_field :picture %>
+  </div>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description %>
+  </div>
+
   <div class="form-actions">
     <%= f.button :submit, "Update" %>
   </div>
-<% end %>
+
+  <% end %>
 
 <h3>Cancel my account</h3>
 
