--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="banner-transparent">
 <div class="sign-in-box">
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
@@ -20,4 +21,5 @@
 
         <%= f.button :submit, "Sign up", class: "btn btn-primary btn-block", value: "Inscription" %>
       <% end %>
+</div>
 </div>
