--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,11 @@
 
 <div id="banner">
-  <%= render 'shared/form' %>
+  <div id="home" class="text-center">
+    <h1>BIENVENUE À LA MAISON</h1>
+    <h2>Louez des logements uniques auprès d'hôtes locaux dans plus de 190 pays</h2>
+  </div>
+  <div id="position-search">
+  <%= render 'shared/form'%>
+  </div>
 </div>
 
