--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12 col-md-12">
-    <form class="form-inline" role="form">
+    <form class="form-inline search-size" role="form">
         <div class="form-group nested-group">
             <input type="text" class="form-control" placeholder="Destination">
             <input placeholder="Arrivée" type="text" onfocus="(this.type='date')" id="date" class="form-control">
