--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,8 +24,13 @@
           </li>
           <li class="dropdown">
             <%= link_to "#", {class: "dropdown-toggle", "data-toggle" => "dropdown", "role" => "button", "aria-expanded" => "false"} do %>
-              <%= image_tag current_user.picture || "http://placehold.it/30x30", class: "img-avatar" %>
+              <% if current_user.picture.exists? %>
+                 <%= image_tag current_user.picture%>
               Profile <span class="caret"></span>
+              <% else %>
+              <%= image_tag "http://placehold.it/30x30", class: "img-avatar" %>
+              Profile <span class="caret"></span>
+              <% end %>
             <% end %>
             <ul class="dropdown-menu" role="menu">
               <li>
