--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
           <li class="dropdown">
             <%= link_to "#", {class: "dropdown-toggle", "data-toggle" => "dropdown", "role" => "button", "aria-expanded" => "false"} do %>
               <% if current_user.picture.exists? %>
-                 <%= image_tag current_user.picture%>
+                 <%= image_tag current_user.picture.url(:thumb), class: "img-avatar" %>
               Profile <span class="caret"></span>
               <% else %>
               <%= image_tag "http://placehold.it/30x30", class: "img-avatar" %>
