--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 #banner {
   margin-top:-100px;
-  background-image: url(flat_banniere.jpg);
+  background-image: url(surfhouse.jpg);
   width: 100%;
   height: 650px;
   background-repeat: no-repeat;
