--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <div id="banner">
   <div id="home" class="text-center">
     <h1>BIENVENUE À LA MAISON</h1>
-    <h2>Louez des logements uniques auprès d'hôtes locaux dans plus de 190 pays</h2>
+    <h2>Louez des SurfHouse uniques auprès surfeurs locaux dans le monde</h2>
   </div>
   <div id="position-search">
   <%= render 'shared/form'%>
