--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,10 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <%= image_tag "logo_red_airbnb.svg" %>
+        <%= image_tag "logo_white_surf.svg" %>
+      </a>
+      <a class="navbar-brand" href="/">
+       <h4>Surfbnb</h4>
       </a>
     </div>
 
