--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,7 +39,7 @@
                 <% end %>
               </li>
               <li>
-                <%= link_to "#" do %>
+                <%= link_to user_flats_path(current_user) do %>
                   <i class="fa fa-home"></i>  <%= t ".profile", default: "Flat" %>
                 <% end %>
               </li>
@@ -59,7 +59,7 @@
           </li>
         <% end %>
         <li>
-          <%= link_to t(".top_call_to_action", default: "Publier une annonce"), "#", class: "btn btn-default btn-xs" %>
+          <%= link_to t(".top_call_to_action", default: "Publier une annonce"), new_user_flat_path(current_user), class: "btn btn-default btn-xs" %>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
