--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,16 @@
 
 <div id="banner">
-  <div id="home" class="text-center">
+  <div class="text-center">
     <h1>BIENVENUE À LA MAISON</h1>
     <h2>Louez des SurfHouse uniques auprès surfeurs locaux dans le monde</h2>
   </div>
-  <div id="position-search">
-  <%= render 'shared/form'%>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 text-center">
+        <%= render 'shared/form'%>
+      </div>
+    </div>
   </div>
 </div>
 
