--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,6 +9,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  .container  {
+  padding-top: 100px;
+  }
+
   h1 {
     font-size:60px;
     line-height:66px;
