--- a/app/assets/stylesheets/pages/_registrations.scss
+++ b/app/assets/stylesheets/pages/_registrations.scss
@@ -13,6 +13,13 @@
   background-color: white;
   margin: 0 auto;
 }
+
+.edit-box {
+  padding: 20px;
+  width: 400px;
+  background-color: white;
+  margin: 0 auto;
+}
 .decorative-input-name {
   background-image: url(https://a2.muscache.com/airbnb/static/signinup/text-field-icons-9c18e4e23864cb33a8f0f7c32c0b86ee.png);
   background-repeat: no-repeat;
