--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,48 +1,50 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class = "text-center">Edit <%= resource_name.to_s.humanize %></h2>
+<div class = "edit-box">
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+    <div class="form-inputs">
+      <%= f.input :first_name, placeholder: 'Prénom', required: true, autofocus: true, label: false, input_html: { class: 'decorative-input-name' } %>
+      <%= f.input :last_name, placeholder: 'Nom', required: true, label: false, input_html: { class: 'decorative-input-name' } %>
+      <%= f.input :email, required: true, autofocus: true %>
 
-  <div class="form-inputs">
-    <%= f.input :first_name, placeholder: 'Prénom', required: true, autofocus: true, label: false, input_html: { class: 'decorative-input-name' } %>
-    <%= f.input :last_name, placeholder: 'Nom', required: true, label: false, input_html: { class: 'decorative-input-name' } %>
-    <%= f.input :email, required: true, autofocus: true %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+      <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
+      <%= f.input :password_confirmation, required: false %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
+
+        <p><strong>Anniversaire</strong></p>
+
+      <div class="form-inline form-group">
+      <%= f.input :birthday_month, collection: ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"], required: true, prompt: "Mois", label: false, input_html: { class: 'decorative-input-date size-box-month' } %>
+      <%= f.input :birthday_day, collection: 1..31, required: true, prompt: "Jour", label: false, input_html: { class: 'decorative-input-date size-box-day' } %>
+      <%= f.input :birthday_year, collection: 1895..2015, required: true, prompt: "Année", label: false, input_html: { class: 'decorative-input-date size-box-year' } %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :picture %>
+      <%= f.file_field :picture %>
+    </div>
+    <div class="form-group">
+      <%= f.input :description %>
+    </div>
+
     <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
 
-    <div>
-      <strong>Anniversaire</strong>
+    <div class="form-actions">
+      <%= f.button :submit, "Update", class: "btn btn-primary btn-block", value: "Update" %>
     </div>
-    <div class="form-inline">
-    <%= f.input :birthday_month, collection: ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"], required: true, prompt: "Mois", label: false, input_html: { class: 'decorative-input-date size-box-month' } %>
-    <%= f.input :birthday_day, collection: 1..31, required: true, prompt: "Jour", label: false, input_html: { class: 'decorative-input-date size-box-day' } %>
-    <%= f.input :birthday_year, collection: 1895..2015, required: true, prompt: "Année", label: false, input_html: { class: 'decorative-input-date size-box-year' } %>
-    </div>
+
+    <% end %>
+
+  <h5>Cancel my account</h5>
+
+  <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+  <div class = "text-center">
+    <%= link_to "Back", :back, class: "btn btn-default btn" %>
   </div>
-
-  <div class="form-group">
-    <%= f.label :picture %>
-    <%= f.file_field :picture %>
-  </div>
-  <div class="form-group">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-
-  <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
