--- a/app/views/flats/search.html.erb
+++ b/app/views/flats/search.html.erb
@@ -1,13 +1,18 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-6">
-    <% @flats.each do |flat| %>
-      <%= link_to flat.presentation, user_flat_path(flat.user_id,flat) %>
-      <ul class="list-inline">
-      <li><%= flat.property_type %></li>
-      <li><%= flat.city %></li>
-      </ul>
-    <% end %>
+      <h1 class = "text-center">Results of your research</h1>
+        <% @flats.each do |flat| %>
+          <div class = "flat-card">
+            <%= image_tag flat.picture.url(:medium) %>
+            <p><%= link_to flat.presentation, user_flat_path(flat.user_id,flat) %></p>
+            <ul class="list-inline">
+              <li><%= flat.property_type %></li>
+              <li>-</li>
+              <li><%= flat.city %></li>
+            </ul>
+          </div>
+        <% end %>
     </div>
   </div>
 </div>
