geolocalisation in progress

--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -10,7 +10,7 @@
         <%= f.input :room_type, prompt: "Type de logement",
             collection: ["Logement entier", "Chambre privée", "Chambre partagée"],
             required: true, label: false %>
-        <%= f.input :capacity, placeholder: "Capacité d'acceuil", required: true, label: false %>
+        <%= f.input :capacity, placeholder: "Capacité d'accueil", required: true, label: false %>
         <%= f.input :presentation, placeholder: 'Présentation', required: true, label: false %>
         <%= f.input :street, placeholder: 'Rue', required: true, label: false %>
         <%= f.input :zip_code, placeholder: 'Code postal', required: true, label: false %>
