--- a/app/assets/stylesheets/pages/_flats.scss
+++ b/app/assets/stylesheets/pages/_flats.scss
@@ -18,11 +18,13 @@
     width: 347px;
     margin: 20px;
     display: inline-block;
+    box-shadow: 1px 1px 3px grey;
   }
 
   .flat-card-text {
     padding: 20px;
   }
+
 
 body {
   padding-top: 60px;
