--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,23 +1,23 @@
-<h1 class = "text-center"> Here my flats</h1>
 <div id = "myflats">
-  <div class="container">
-    <div class="row">
-          <ul>
-            <% @flats.each do |flat| %>
-            <div class="col-xs-12 col-md-4">
-              <li class = "flat-card">
-                <%= image_tag flat.picture.url(:medium) %>
-                  <div class="flat-card-text">
-                    <p><strong><%= flat.title %></strong></p>
-                    <p><strong>Propriété : </strong><%= flat.property_type %> - <%= flat.room_type %></p>
-
-                    <p><%= link_to "Modifier les informations", edit_user_flat_path(current_user, flat) %></p>
-                    <p><%= link_to "Supprimer mon annonce", user_flat_path(current_user, flat), method: :delete %></p>
-                  </div>
-                </li>
-              </div>
-            <% end %>
-          </ul>
+  <h1 class = "text-center">SurfHouses</h1>
+    <div class="container">
+      <div class="row">
+            <ul>
+              <% @flats.each do |flat| %>
+              <div class="col-xs-12 col-md-4">
+                <li class = "flat-card">
+                    <div class="flat-picture" style="background-image: url(<%= asset_path flat.picture.url(:medium) %>); height: 300px; background-size: cover;">
+                    </div>
+                    <div class="flat-card-text">
+                      <p><strong><%= flat.title %></strong></p>
+                      <p><strong>Propriété : </strong><%= flat.property_type %> - <%= flat.room_type %></p>
+                      <p><%= link_to "Modifier les informations", edit_user_flat_path(current_user, flat) %></p>
+                      <p><%= link_to "Supprimer cette annonce", user_flat_path(current_user, flat), method: :delete %></p>
+                    </div>
+                  </li>
+                </div>
+              <% end %>
+            </ul>
+      </div>
     </div>
-  </div>
 </div>
