--- a/app/views/flats/search.html.erb
+++ b/app/views/flats/search.html.erb
@@ -5,16 +5,15 @@
         <% @flats.each do |flat| %>
           <div class = "flat-card">
             <% if flat.picture.exists? %>
-              <%= image_tag flat.picture.url(:medium) %> %
+              <%= image_tag flat.picture.url(:medium) %>
             <% else %>
-              <%= image_tag "http://placehold.it/353x235"%>
+              <%= image_tag "defopic.png"%>
             <% end %>
-            <p><%= link_to flat.presentation, user_flat_path(flat.user_id,flat) %></p>
-            <ul class="list-inline">
-              <li><%= flat.property_type %></li>
-              <li>-</li>
-              <li><%= flat.city %></li>
-            </ul>
+            <div class="flat-card-text">
+              <p><%= link_to(flat.title, user_flat_path(flat.user_id,flat)) %></p>
+              <p><strong><%= flat.title %></strong></p>
+              <p><strong>Propriété : </strong><%= flat.property_type %> - <%= flat.room_type %></p>
+            </div>
           </div>
         <% end %>
     </div>
@@ -23,7 +22,7 @@
         <% content_for(:after_js) do %>
           <%= javascript_tag do %>
             $(document).on('ready', function() {
-handler = Gmaps.build('Google');
+              handler = Gmaps.build('Google');
               handler.buildMap({ internal: { id: 'map' } }, function(){
                 markers = handler.addMarkers(<%= raw @markers.to_json %>);
                 handler.bounds.extendWith(markers);
