--- a/app/assets/stylesheets/pages/_flats.scss
+++ b/app/assets/stylesheets/pages/_flats.scss
@@ -21,6 +21,18 @@
     box-shadow: 1px 1px 3px grey;
   }
 
+
+  .separation {
+    background-color: #48A3A9;
+    padding: 1px;
+    color: white;
+
+    h1 {
+      font-size: 36px;
+      line-height: 21px;
+    }
+  }
+
   .flat-card-text {
     padding: 20px;
   }
