--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,4 +1,6 @@
-<div = "separation"></div>
+<div class="text-center separation">
+  <h1>Détail de l'appartement</h1>
+</div>
 
 <div class="container">
   <div class="row">
