change some indentation and change searchview

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -30,3 +30,7 @@ $link-color: $green;
 // Grid padding
 $grid-gutter-width: 0 ;
 
+// Container-size
+$container-tablet : (720px + 0px);
+$container-desktop : (940px + 0px);
+$container-large-desktop : (1140px + 0px);
