--- a/app/views/flats/search.html.erb
+++ b/app/views/flats/search.html.erb
@@ -1,27 +1,33 @@
 <div class = "separation">
   <h1 class = "text-center">Vos résultats de recherche</h1>
 </div>
-<div class="container">
-  <div class="row">
-    <div class="col-xs-6">
+<div class = "box">
+<div class ="box-left">
+  <div class="container-fluid">
+    <div class="row">
 
         <% @flats.each do |flat| %>
-          <div class = "flat-card">
-            <% if flat.picture.exists? %>
-              <%= image_tag flat.picture.url(:medium) %>
-            <% else %>
-              <%= image_tag "defopic.png"%>
-            <% end %>
-            <div class="flat-card-text">
-              <p><strong><%= link_to(flat.title, user_flat_path(flat.user_id,flat)) %></strong> - <%= flat.price %> € / nuit</p>
-              <p><strong>Propriété : </strong><%= flat.property_type %> - <%= flat.room_type %></p>
+          <div class="col-xs-12 col-sm-6">
+            <div class = "flat-card">
+              <% if flat.picture.exists? %>
+                <%= image_tag flat.picture.url(:medium) %>
+              <% else %>
+                <%= image_tag "defopic.png"%>
+              <% end %>
+              <div class="flat-card-text">
+                <p><strong><%= link_to(flat.title, user_flat_path(flat.user_id,flat)) %></strong> - <%= flat.price %> € / nuit</p>
+                <p><strong>Propriété : </strong><%= flat.property_type %> - <%= flat.room_type %></p>
+              </div>
             </div>
           </div>
         <% end %>
 
     </div>
-    <div class="col-xs-6">
-      <div id="map" style="width: 100%; height: 400px;"></div>
+  </div>
+</div>
+
+  <div class ="box-right">
+      <div id="map" style="width: 450px; height: 450px;"></div>
         <% content_for(:after_js) do %>
           <%= javascript_tag do %>
             $(document).on('ready', function() {
@@ -34,8 +40,8 @@
             })
           <% end %>
         <% end %>
-    </div>
   </div>
+</div>
 </div>
 
 
